sample/error/e02705-ii.asn
E02705-II DEFINITIONS ::=
BEGIN
    setof SET OF int INTEGER ::= {  -- E02705-II
        a 100, b 200, c 300
    }
END
